<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="42dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mess_card_view"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="16dp"
                    app:cardElevation="0dp"
                    app:cardPreventCornerOverlap="false"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp">

                    <ImageView
                        android:id="@+id/avatarImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </com.google.android.material.card.MaterialCardView>

                <ImageButton
                    android:id="@+id/avatarChangeImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginLeft="65dp"
                    android:background="@color/white"
                    app:srcCompat="@drawable/ic_pencil_button" />

            </FrameLayout>

            <TextView
                android:id="@+id/cvNameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="CV name"
                android:layout_marginStart="3dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cvText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="CV text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/experienceText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Experience" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/educationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Education" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/cvSalaryTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="Salary"
                android:layout_marginStart="3dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="" />

            <TextView
                android:id="@+id/vacancyDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/date"
                android:layout_marginStart="3dp"/>

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/date"
                android:inputType="date"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/vacancyCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/category" />


            <Spinner
                android:id="@+id/categoriesList"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDelete"
                    android:layout_width="80dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="10dp"
                    android:textSize="23sp"
                    app:icon="@drawable/delete" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="290dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/save"
                    android:textSize="23sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>